# fountain-wasm

./: Cargo.toml  README.md
pkg/: fountain_wasm.d.ts  fountain_wasm.js  fountain_wasm_bg.wasm  fountain_wasm_bg.wasm.d.ts  package.json
simple/: bootstrap.js  index.js  package.json  webpack.config.js
src/: lib.rs  ltcode.rs  soliton.rs
wasm/: hello_wasm.d.ts  hello_wasm.js  hello_wasm_bg.wasm  package.json
