[package]
name = "fountain-wasm"
version = "0.0.2"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
web-sys = "0.3.77"
rand = "0.8.5"  # 更新到最新稳定版
getrandom = { version = "0.2.15", features = ["js"] }

[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']
